# mystmd-pythonapi

./: .gitignore  FINDINGS.md  ISSUE.md  README.md  SPEC.md  STATE.md  package-lock.json  package.json  pyproject.toml  requirements.txt  run_all.sh  tsconfig.json  tsup.config.ts
.claude/skills/acceptance-oracle/: SKILL.md
.claude/skills/mystmd-case-sensitive-linking/: SKILL.md
.claude/skills/toolchain-setup/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
fixtures/all_dynamic/: __init__.py
fixtures/all_static/: __init__.py
fixtures/exc/: __init__.py
fixtures/inv/: python.objects.inv
fixtures/sample/: __init__.py  _core.py
fixtures/sample/subpkg/: __init__.py
fixtures/sigs/: __init__.py
fixtures/styles/: google_mod.py  numpy_mod.py  sphinx_mod.py
python/: extract.py  pyapi_extract.py  sidecar.py
scripts/: make_python_inv.py  repro_case_sensitivity.py  warm_harness.mjs
src/: cli.ts  index.ts  ir.ts
src/extractor/: griffe.ts  stub.ts  warm.ts
src/inventory/: objectsInv.ts
src/render/: renderApi.ts
tests/: conftest.py  harness.py  test_case_clash.py  test_docstring_styles.py  test_exception_kind.py  test_extractor_swap.py  test_myst_consumer.py  test_myst_producer.py  test_north_star_re.py  test_objects_inv.py  test_signature_kinds.py  test_sphinx_consumer.py  test_structure.py  test_warm_roots.py  test_watch.py
